--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -44,7 +44,7 @@
         font-weight: bold;
         font-size: 5.5rem;
         margin-bottom: 0;
-        a{
+        a {
           color: #fff;
         }
       }
@@ -60,11 +60,13 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 55px;
+      gap: 75px;
       margin-top: 6rem;
 
       .menu-category-item {
         width: 60%;
+        padding-bottom: 40px;
+        border-bottom: 1px solid var(--color-primary);
 
         .category-name {
           color: var(--color-primary);
@@ -93,10 +95,20 @@
             }
           }
         }
+
+        &:last-child {
+          border-bottom: none;
+        }
       }
     }
 
+    @media (max-width: 979px) {
+      padding: 65px;
+    }
+
     @media (max-width: 767px) {
+      width: 85%;
+      padding: 50px;
       .menu-heading {
         .title {
           font-size: 3.5rem;
@@ -129,6 +141,8 @@
     }
 
     @media (max-width: 565px) {
+      padding: 40px;
+
       .menu-heading {
         .title {
           font-size: 2.5rem;
