modified design (and responsive)

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -30,9 +30,9 @@
   .hero-content {
     width: 45%;
     position: absolute;
-    top: 40%;
-    left: 25%;
-    transform: translate(-40%, -25%);
+    top: 45%;
+    right: 5%;
+    transform: translate(5%,-45%);
     color: #fff;
     z-index: 1;
 
