--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -11,7 +11,7 @@
     border-bottom: 1px solid #d3a46b;
     margin-bottom: 40px;
 
-    a{
+    a {
       color: #fff;
       transition: 0.3s all;
       &:hover {
@@ -60,9 +60,21 @@
     z-index: -1;
   }
 
-  .sidebar-footer{
+  .sidebar-footer {
     position: fixed;
-    bottom: 0  ;
+    bottom: 0;
+  }
+
+  @media (max-width: 979px) {
+    width: 300px !important;
+  }
+
+  @media (max-width: 676px) {
+    width: 250px !important;
+  }
+
+  @media (max-width: 565px) {
+    width: 220px !important;
   }
 }
 
@@ -73,7 +85,7 @@
   gap: 5px;
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   //   background-color: #d4a46b;
   background-color: #f39c12;
 
@@ -81,7 +93,7 @@
   font-size: 20px;
   padding: 6px 18px;
   border: none;
-  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
   outline: none;
   cursor: pointer;
   transition-duration: 500ms;
@@ -89,6 +101,28 @@
   z-index: 101;
 
   &.slide {
-    left: 340px;
+    right: 340px;
+  }
+
+  @media (max-width: 979px) {
+    font-size: 18px;
+    &.slide {
+      right: 300px;
+    }
+
+  }
+
+  @media (max-width: 676px) {
+
+    &.slide {
+      right: 250px;
+    }
+  }
+
+  @media (max-width: 565px) {
+    font-size: 16px;
+    &.slide {
+      right: 220px;
+    }
   }
 }
